diseño de estilos y html base

--- a/web/index.html
+++ b/web/index.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="form">
-        <input type="file" name="path" id="path">
+    <div class="border">
+        <div class="form">
+            <div>
+                <p  style="margin: 0; color: rgba(255, 255, 252, 0.281);">Carpeta Seleccionada:</p>
+                <input type="text" name="path" id="path">
+            </div>
+            
+        </div>
     </div>
 </body>
 </html>
